<resources>

    <!-- Strings for the SPlash screen-->
    <string name="offline_play_button">Offline Play</string>
    <string name="online_play_button">Online Play</string>
    <string name="saved_games_button">Saved Games</string>
    <string name="how_play_button">How to Play</string>
    <string name="creator_email">[ ranjithsuda123@gmail.com ]</string>
    <string name="creator_name">Ranjith</string>
    <string name="email_app_name">Name of Application : </string>
    <string name="email_app_version">App Version : </string>
    <string name="email_device_name">Device Maker : </string>
    <string name="email_device_version">Device Android version : </string>
    <string name="email_subject">Feed Back about Chain Reaction</string>
    <string name="email_mailId">ranjithsuda123@gmail.com</string>
    <string name="noApp_email_share">No Application found to send Email </string>

    <!-- Strings for Alert dialog in Splash -->
    <string-array name="splash_screen_dialog">
        <item>Exit</item>
        <item>Cancel</item>
    </string-array>
    <string name="splash_screen_dialog_title">Exit Game or Cancel</string>

    <!-- Strings for the Settings Screen -->
    <string name="settings_default_player_name">Player</string>
    <string name="settings_bomb_title">Orb Settings</string>
    <string name="settings_bomb_info">Choose Orb style with which u want to play</string>
    <string name="settings_color_title">Color Settings</string>
    <string name="settings_color_info">Choose Color with which you want to play</string>
    <string name="settings_music_title">Music Settings</string>
    <string name="settings_music_info">Choose Music to be played in game</string>

    <!-- Strings for the Settings Options Dialog -->
    <string name="dialog_bmb_settings_title">Choose the Bomb type</string>
    <string-array name="bmb_settings_array">
        <item>Circle</item>
        <item>Square</item>
        <item>Triangle</item>
    </string-array>
    <string name="dialog_music_settings_title">Choose the background Music</string>
    <string-array name="music_settings_array">
        <item>Sound 1</item>
        <item>Sound 2</item>
        <item>Sound 3</item>
    </string-array>

    <string name="dialog_color_settings_title">Choose Your default Color</string>
    <string-array name="color_settings_array">
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>White</item>
        <item>Blue</item>
        <item>Violet</item>
        <item>Pink</item>
    </string-array>
    <string name="dialog_color_settings_ok">Save</string>
    <string name="dialog_color_settings_reset">Reset</string>
    <string name="settings_save_color_toast_reset">Your Preference is not saved</string>

    <!-- Strings responsible for the Offline Game Screen -->
    <string name="offline_settings_screen_title">Offline Game Settings</string>
    <string name="offline_settings_tile">Offline Game Settings</string>
    <string name="offline_settings_grid_title">Grid size to play :</string>
    <string name="offline_settings_player_title">No of Players :</string>
    <string name="offline_settings_color_tile">Player Colors :</string>
    <string name="offline_settings_play_button">Start Game</string>

    <string name="grid_chooser_view_small_item">S</string>
    <string name="grid_chooser_view_medium_item">M</string>
    <string name="grid_chooser_view_large_item">L</string>

    <string name="player_color_self_view">U</string>
    <string name="player_color_other_view">P</string>

    <!-- Strings for the Saved Games Layout -->
    <string name="title_activity_saved_games">Saved Games</string>
    <string name="saved_games_resume_button">Resume Game</string>
    <string name="saved_games_item_title">Name of the Game</string>
    <string name="saved_games_item_playerInfo">No of Players :</string>
    <string name="title_activity_game_screen">Game Screen </string>
    <string name="saved_games_no_content">No Saved Games.Click Back to Exit</string>
    <string name="saved_games_item_play">Play</string>
    <string name="saved_games_retrieval_failed">Sorry ,Unable to Retrieve the Saved Games Now.Please try again</string>

    <!-- Strings for the Game Screen -->
    <string name="game_screen_gameTitle">G - </string>
    <string name="game_screen_gameTImer">Time</string>
    <string name="game_screen_exit_dialog">Options for Current Game</string>

    <!-- Strings for Alert dialog in Game Screen -->
    <string-array name="game_screen_dialog">
        <item>Exit</item>
        <item>Restart</item>
        <item>Save &amp; Exit</item>
    </string-array>

    <!-- Strings for the Game WIn Dialog -->
    <string name="player_win_message">%1s has Won . Hurray !! </string>
    <string name="player_win_restart">Restart</string>
    <string name="player_win_exit">Exit</string>

    <!-- Strings for the How to Play Game Info -->
    <string name="how_to_play_tile">Game Instructions to Play</string>
    <string name="how_to_play_startGame">Let\'s Play</string>
    <string name="how_to_play_line1">A Strategy Game for 2 to 8 Players</string>
    <string name="how_to_play_line2">The Objective of Chain Reaction is to take control of the Board by eliminating your opponents orbs.</string>
    <string name="how_to_play_paragraph">a) Players take it in turns to place their Orbs in a
        Cell.\n\nb) Once a cell has reached Critical mass , the orbs explode into the surrounding
        cells adding an extra orb and claiming the cell for the Player.\n \n c) A Player may only
        place their orbs in a blank cell or a cell that contains orbs of their own Colour.\n \n
        As soon as a player looses all their orbs  , they are out of the game.
    </string>

    <string name="how_to_play_settings">Open the Settings Icon on top Right of Main Screen for various Orbs,Player Settings</string>

</resources>
