<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offline_settings_background"
    tools:context="com.ran.chainreaction.activities.OfflineSettingsActivity">

    <!-- Toolbar for Title and Sound -->
    <include
        android:id="@+id/offline_settings_customtoolbar"
        layout="@layout/view_custom_toolbar"/>

    <!-- Button to start the Game -->
    <Button
        android:id="@+id/offline_settings_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@color/offline_screen_buttons_background"
        android:text="@string/offline_settings_play_button"
        android:textColor="@color/offline_screen_textview_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/offline_settings_play"
        android:layout_below="@id/offline_settings_customtoolbar"
        android:layout_marginBottom="@dimen/offline_settings_topbottom_margin"
        android:layout_marginTop="@dimen/offline_settings_topbottom_margin"
        android:orientation="vertical"
        android:weightSum="4">

        <!-- Grid Size Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/offline_settings_gridTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/offline_settings_title_margin"
                android:text="@string/offline_settings_grid_title"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/offline_screen_textview_color"/>

            <com.ran.chainreaction.customviews.GridChooserView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/grid_chooser_parent_margin_side"
                android:layout_marginRight="@dimen/grid_chooser_parent_margin_side">

            </com.ran.chainreaction.customviews.GridChooserView>

        </LinearLayout>

        <!-- No of Players Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/offline_settings_playerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/offline_settings_title_margin"
                android:text="@string/offline_settings_player_title"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/offline_screen_textview_color"/>

            <com.ran.chainreaction.customviews.PlayerChooserView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/player_chooser_parent_margin"/>


        </LinearLayout>

        <!-- Player Colors Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/offline_settings_colorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/offline_settings_title_margin"
                android:text="@string/offline_settings_color_tile"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/offline_screen_textview_color"/>

            <com.ran.chainreaction.customviews.PlayerColorView
                android:id="@+id/offline_settings_colorPreferences"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/player_color_parent_margin"/>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
